Styling dropdown and styling posts

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
-<app-posts></app-posts>
+<app-header style="width: 100vw;"></app-header>
+<app-sorter></app-sorter>
+<app-posts style="display: flex; justify-content: center; flex-direction: column"></app-posts>
 <app-info></app-info>
