--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,3 @@
 <nav class="topBar">
-  <img alt="EU flag" src="assets/pictures/EU-flag.png" class="EUFlag">
+  <img alt="EU flag" src="assets/pictures/EU-flag.png" id="EUFlag">
 </nav>
