--- a/src/app/components/info/info.component.css
+++ b/src/app/components/info/info.component.css
@@ -1,4 +1,5 @@
 .info {
+  font-size: 18px;
   font-weight: 500;
   display: flex;
   align-items: center;
@@ -12,4 +13,9 @@
   position: fixed;
   border-top: 1px solid rgba(0,0,0,0.20);
   z-index: 10;
+}
+#infoIcon {
+  width: 1.5em;
+  height:1.5em;
+  padding: 0 5px;
 }
