--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -9,8 +9,8 @@
   border: 2px solid #FDCB0B;
   width: 70px;
   height: 47px;
-  position: absolute;
-  top: 1%;
+  position: relative;
+  top: 10%;
 }
 
 profileDot {
