--- a/src/app/components/newpost/newpost.component.css
+++ b/src/app/components/newpost/newpost.component.css
@@ -1,11 +1,17 @@
 .main-div {
-  margin-top: -5%;
+  margin-top: -70px;
 }
 
 .main-div mat-card {
   padding: 0;
+  max-width: 500px !important;
 }
 
 .login-form {
   padding: 20px  ;
+}
+
+#content-text {
+  height: 10%;
+  max-height: 150px;
 }
