--- a/src/app/components/newpost/newpost.component.html
+++ b/src/app/components/newpost/newpost.component.html
@@ -7,9 +7,9 @@
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="content" formControlName="content">
+        <textarea matInput placeholder="Content" formControlName="content" id="content-text"></textarea>
       </mat-form-field>
-      <button mat-raised-button type="submit" class="mt-5" color="primary">Login</button>
+      <button mat-raised-button type="submit" class="mt-5" color="primary">Post</button>
     </form>
   </mat-card>
 </div>
