--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,14 +1,19 @@
 <div fxLayoutAlign="center center" fxFlexFill class="main-div">
   <mat-card fxFlex="25">
-    <mat-toolbar color="primary">Login-Page</mat-toolbar>
+    <mat-toolbar color="primary">Login Page</mat-toolbar>
     <form fxLayoutAlign="stretch" fxLayout="column" class="login-form" [formGroup]="formGroup" (ngSubmit)="loginProcess()">
       <mat-form-field>
         <input matInput placeholder="Username" formControlName="username">
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput placeholder="Password" type="password" formControlName="password">
+        <input matInput placeholder="Password" type={{passwordType}} formControlName="password">
       </mat-form-field>
+      <label id="showP">
+        <input type="checkbox" name="showP" 
+        value="invisible" (click)="togglePass()"/>
+            Show Password
+        </label>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Login</button>
     </form>
   </mat-card>
