Moved http logic from posts.component.ts to post.service.ts

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,11 +10,12 @@
         <input matInput placeholder="Password" type={{passwordType}} formControlName="password">
       </mat-form-field>
       <label id="showP">
-        <input type="checkbox" name="showP" 
-        value="invisible" (click)="togglePass()"/>
+        <input type="checkbox" name="showP"
+        value="invisible" (click)="togglePass()">
             Show Password
         </label>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Login</button>
     </form>
   </mat-card>
 </div>
+
