--- a/src/app/components/add-icon/add-icon.component.html
+++ b/src/app/components/add-icon/add-icon.component.html
@@ -1,1 +1,1 @@
-<a href="/newpost"><img role="add icon" id="add" src="assets/pictures/add_icon.png"/></a>
+<a routerLink="newpost"><img role="add icon" id="add" src="assets/pictures/add_icon.png"/></a>
