Fix elseBlock in posts

--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -15,5 +15,15 @@
     </div>
     <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
 </div>
+  <ng-template #elseBlock>
+      <div class="metaData">
+        <div class="upDown">
+          <img alt="upvote" src="{{emptyFilledPath[getUpvote(i)]}}" id="upVote" width="25" height="25" style="cursor: pointer; padding: 5px"/>
+          {{x.upvotes-x.downvotes}}
+          <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" id="downVote" width="25" height="25" style="transform: scaleY(-1); cursor: pointer; padding: 3px"/>
+        </div>
+        <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
+      </div>
+  </ng-template>
 </article>
 </div>
