--- a/src/theme.scss
+++ b/src/theme.scss
@@ -36,8 +36,8 @@ $mat-yellow: (
 
 
 $my-primary: mat-palette($mat-indigo, 600);
-$my-accent: mat-palette($mat-light-green, 800);
-$my-warn: mat-palette($mat-yellow, 500);
+$my-accent: mat-palette($mat-yellow, 500);
+$my-warn: mat-palette($mat-red, 500);
 
 $my-theme: mat-light-theme($my-primary, $my-accent, $my-warn);
 
