--- a/src/app/components/editpost/editpost.component.html
+++ b/src/app/components/editpost/editpost.component.html
@@ -3,14 +3,14 @@
     <mat-toolbar color="primary">Edit Post</mat-toolbar>
     <form fxLayoutAlign="stretch" fxLayout="column" class="post-form" [formGroup]="formGroup" (ngSubmit)="editPost()">
       <mat-form-field>
-        <input matInput placeholder="Title" formControlName="title" [(ngModel)]="title">
+        <input matInput placeholder="Title" formControlName="title">
         <button *ngIf="title" matSuffix mat-icon-button aria-label="Clear" (click)="title=''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
 
       <mat-form-field>
-        <textarea matInput placeholder="Content" formControlName="content" [(ngModel)]="content"></textarea>
+        <textarea matInput placeholder="Content" formControlName="content"></textarea>
         <button *ngIf="content" matSuffix mat-icon-button aria-label="Clear" (click)="content=''">
           <mat-icon>close</mat-icon>
         </button>
