--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -17,12 +17,17 @@
       </mat-form-field>
 
       <mat-form-field>
-        <input matInput type="password" placeholder="Password" formControlName="password">
+        <input matInput type="{{passwordType}}" placeholder="Password" formControlName="password">
         <button *ngIf="password" matSuffix mat-icon-button aria-label="Clear" (click)="password=''">
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
-
+      <label id="showP">
+        <input type="checkbox" name="showP"
+               value="invisible" (click)="togglePass()">
+        Show Password
+      </label>
+      <button mat-raised-button class="mt-5" color="accent" (click)="switchToLogin()">To Login?</button>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Register</button>
     </form>
   </mat-card>
