--- a/src/app/components/newpost/newpost.component.html
+++ b/src/app/components/newpost/newpost.component.html
@@ -9,7 +9,7 @@
       <mat-form-field>
         <textarea matInput placeholder="content" formControlName="content"></textarea>
       </mat-form-field>
-      <button mat-raised-button type="submit" class="mt-5" color="primary">Login</button>
+      <button mat-raised-button type="submit" class="mt-5" color="primary">Post</button>
     </form>
   </mat-card>
 </div>
