--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -2,7 +2,7 @@
 <article *ngFor="let x of response; let i = index" class="proposal">
   <div class="proposal-head">
     <h1>{{x.title}}</h1>
-    <a routerLink="/editpost/{{x._id}}"><img src="assets/pictures/edit_icon.png" style="cursor: pointer; width:1.5em; height: 1.5em;"></a>
+    <a routerLink="/editpost/{{x._id}}" *ngIf="isAuthor(x.author_id)"><img src="assets/pictures/edit_icon.png" style="cursor: pointer; width:1.5em; height: 1.5em;"></a>
   </div>
   <p class="policy">
     {{x.content}}
