Voting is done; no patch in backend yet

--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -10,7 +10,7 @@
   <div class="metaData" *ngIf="isLoggedIn(); else elseBlock" >
     <div class="upDown">
     <img alt="upvote" src="{{emptyFilledPath[getUpvote(i)]}}" class="upVote" width="25" height="25" (click)="voteUp(i)" style="cursor: pointer; padding: 5px">
-    {{x.upvotes-x.downvotes}}
+    {{displayVotes(x)}}
     <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" class="downVote" width="25" height="25" (click)="voteDown(i)" style="transform: scaleY(-1); cursor: pointer; padding: 3px">
     </div>
     <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
@@ -19,7 +19,7 @@
       <div class="metaData">
         <div class="upDown">
           <img alt="upvote" src="{{emptyFilledPath[getUpvote(i)]}}" class="upVote" width="25" height="25" style="cursor: pointer; padding: 5px">
-          {{x.upvotes-x.downvotes}}
+          {{displayVotes(x)}}
           <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" class="downVote" width="25" height="25" style="transform: scaleY(-1); cursor: pointer; padding: 3px">
         </div>
         <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
