--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <app-header style="width: 100vw"></app-header>
 <router-outlet></router-outlet>
-<app-info></app-info>
+<app-info class="info"></app-info>
