--- a/src/app/components/editpost/editpost.component.html
+++ b/src/app/components/editpost/editpost.component.html
@@ -1,7 +1,7 @@
 <div fxLayoutAlign="center center" fxFlexFill class="main-div">
   <mat-card fxFlex="25">
     <mat-toolbar color="primary">Edit Post</mat-toolbar>
-    <form fxLayoutAlign="stretch" fxLayout="column" class="post-form" [formGroup]="formGroup" (ngSubmit)="editPost()">
+    <form *ngIf="formGroup" fxLayoutAlign="stretch" fxLayout="column" class="post-form" [formGroup]="formGroup" (ngSubmit)="editPost()">
       <mat-form-field>
         <input matInput placeholder="Title" formControlName="title">
         <button *ngIf="title" matSuffix mat-icon-button aria-label="Clear" (click)="title=''">
