--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -1,6 +1,4 @@
-<!-- <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script> -->
-
 <div class="info">
-  <img src="/assets/pictures/info_icon.png" id="infoIcon"/>
+  <img src="/assets/pictures/info_icon.png" id="infoIcon">
   Just click the plus icon and add your policy idea!
 </div>
