--- a/src/app/components/posts/posts.component.css
+++ b/src/app/components/posts/posts.component.css
@@ -1,28 +1,28 @@
 .content {
-  display: flex; 
-  justify-content: center; 
-  align-items: center; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   margin-top: 3.5em;
 }
 .proposal {
-  border: 2px solid rgba(0,0,0,0.2);
-  border-radius: 30px;
+  padding: 0;
   width: 45vw;
   min-width: 300px;
   /* height: 400px; */
-  margin: 0em 0 3em;
-  
+  margin: 0 0 3em;
+
 }
 .proposal-head {
-  margin: 15px 15px 0px;
+  margin-bottom: 10px;
+  padding: 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 .proposal h1 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  font-size: 30;
+  font-size: 30px;
   font-weight: 500;
   color: #1E448A;
   text-align: center;
@@ -44,7 +44,6 @@
 .upDown {
   display:flex;
   align-items: center;
-  margin-left: 15px;
 }
 .date {
   margin-right: 15px;
