--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,29 +1,29 @@
 <div class="content">
-<article *ngFor="let x of response; let i = index" class="proposal">
-  <div class="proposal-head">
-    <h1>{{x.title}}</h1>
-    <a routerLink="/editpost/{{x._id}}" *ngIf="isAuthor(x.author_id)"><img src="assets/pictures/edit_icon.png" style="cursor: pointer; width:1.5em; height: 1.5em;"></a>
-  </div>
-  <p class="policy">
-    {{x.content}}
-  </p>
-  <div class="metaData" *ngIf="isLoggedIn(); else elseBlock" >
-    <div class="upDown">
-    <img alt="upvote" src="{{emptyFilledPath[getUpvote(i)]}}" class="upVote" width="25" height="25" (click)="voteUp(i)" style="cursor: pointer; padding: 5px">
-    {{displayVotes(x)}}
-    <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" class="downVote" width="25" height="25" (click)="voteDown(i)" style="transform: scaleY(-1); cursor: pointer; padding: 3px">
-    </div>
-    <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
-</div>
-  <ng-template #elseBlock>
-      <div class="metaData">
-        <div class="upDown">
-          <img alt="upvote" src="{{emptyFilledPath[getUpvote(i)]}}" class="upVote" width="25" height="25" style="cursor: pointer; padding: 5px">
-          {{displayVotes(x)}}
-          <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" class="downVote" width="25" height="25" style="transform: scaleY(-1); cursor: pointer; padding: 3px">
-        </div>
-        <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
+  <mat-card *ngFor="let x of response; let i = index" class="proposal">
+    <mat-toolbar class="proposal-head" color="primary">
+      {{x.title}}
+      <a routerLink="/editpost/{{x._id}}" *ngIf="isAuthor(x.author_id)"><img src="assets/pictures/edit_icon.png" style="cursor: pointer; width:1.5em; height: 1.5em;"></a>
+    </mat-toolbar>
+    <p class="policy">
+      {{x.content}}
+    </p>
+    <div class="metaData" *ngIf="isLoggedIn(); else elseBlock" >
+      <div class="upDown">
+      <img alt="upvote" src="{{emptyFilledPath[getUpvote(i)]}}" class="upVote" width="25" height="25" (click)="voteUp(i)" style="cursor: pointer; padding: 5px">
+      {{displayVotes(x)}}
+      <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" class="downVote" width="25" height="25" (click)="voteDown(i)" style="transform: scaleY(-1); cursor: pointer; padding: 3px">
       </div>
-  </ng-template>
-</article>
+      <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
+  </div>
+    <ng-template #elseBlock>
+        <div class="metaData">
+          <div class="upDown">
+            <img alt="upvote" src="{{emptyFilledPath[getUpvote(i)]}}" class="upVote" width="25" height="25" style="cursor: pointer; padding: 5px">
+            {{displayVotes(x)}}
+            <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" class="downVote" width="25" height="25" style="transform: scaleY(-1); cursor: pointer; padding: 3px">
+          </div>
+          <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
+        </div>
+    </ng-template>
+  </mat-card>
 </div>
