--- a/src/app/components/user-settings/user-settings.component.css
+++ b/src/app/components/user-settings/user-settings.component.css
@@ -1,9 +1,9 @@
 .main-div {
   margin-top: -70px;
-  
+
 }
 
-.main-div mat-card {
+.main-div mat-card, .notLoggedIn mat-card {
   padding: 0;
   max-width: 500px !important;
   margin: 5px;
@@ -16,4 +16,8 @@
 
 #showP{
   margin-bottom: 0.5em;
+}
+
+.notLoggedIn {
+
 }
