--- a/src/app/components/newpost/newpost.component.html
+++ b/src/app/components/newpost/newpost.component.html
@@ -7,7 +7,7 @@
       </mat-form-field>
 
       <mat-form-field>
-        <textarea matInput placeholder="content" formControlName="content"></textarea>
+        <textarea matInput placeholder="content" formControlName="content" id="content-text"></textarea>
       </mat-form-field>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Post</button>
     </form>
