--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -14,8 +14,7 @@
         <input matInput placeholder="New Password" type={{passwordType}} formControlName="new_password">
       </mat-form-field>
       <label id="showP">
-        <input type="checkbox" name="showP" (click)="togglePass()">
-        Show Password
+        <mat-checkbox type="checkbox" name="showP" (click)="togglePass()">Show Password</mat-checkbox>
       </label>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Save</button>
     </form>
