--- a/src/app/components/posts/posts.component.css
+++ b/src/app/components/posts/posts.component.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 3.5em;
+  /* margin-top: 3.5em; */
   padding-bottom: 3em !important;
   border-radius: 4px!important;
 }
