--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
 <app-home-header></app-home-header>
-<app-sorter></app-sorter>
-<app-posts></app-posts>
+<app-sorter (outputSortingOptions)="getChildData($event)"></app-sorter>
+<app-posts [sortingOptions]="sortOptions"></app-posts>
