Added Warning icon for <mat-error>

--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="error; else connected" fxLayoutAlign="center center">
   <mat-error>
-    {{error}}
+    <mat-icon>warning</mat-icon> {{error}}
   </mat-error>
 </div>
 
