--- a/src/app/components/editpost/editpost.component.html
+++ b/src/app/components/editpost/editpost.component.html
@@ -16,7 +16,7 @@
         </button>
       </mat-form-field>
       <mat-error *ngIf="error">
-        {{error}}
+        <mat-icon>warning</mat-icon> {{error}}
       </mat-error>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Save Post</button>
       <button mat-raised-button class="mt-5" color="warn" (click)="deletePost()">Delete Post</button>
