--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,7 +13,7 @@
         <mat-checkbox name="showP" (click)="togglePass()">Show Password</mat-checkbox>
       </label>
       <mat-error *ngIf="error">
-        {{error}}
+        <mat-icon>warning</mat-icon> {{error}}
       </mat-error>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Login</button>
       <button mat-raised-button class="mt-5" color="accent" (click)="switchToRegister()">To Register?</button>
