--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -26,7 +26,7 @@
         <mat-checkbox name="showP" (click)="togglePass()">Show Password</mat-checkbox>
       </label>
       <mat-error *ngIf="error">
-        {{error}}
+        <mat-icon>warning</mat-icon> {{error}}
       </mat-error>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Register</button>
       <button mat-raised-button class="mt-5" color="accent" (click)="switchToLogin()">To Login?</button>
