--- a/src/app/components/profile-icon/profile-icon.component.html
+++ b/src/app/components/profile-icon/profile-icon.component.html
@@ -1,2 +1,2 @@
-<a *ngIf="isLoggedIn(); else elseBlock" routerLink="user"><span class="profileDot">A</span></a>
-<ng-template #elseBlock><a routerLink="login"><span class="profileDot">A</span></a></ng-template>
+<a *ngIf="isLoggedIn(); else elseBlock" routerLink="user"><span class="profileDot"><img src="assets/pictures/profile_icon.png" id="profileImg" ></span></a>
+<ng-template #elseBlock><a routerLink="login"><span class="profileDot"><img src="assets/pictures/profile_icon.png" id="profileImg"></span></a></ng-template>
