Fixed Bugs in PostComponent

--- a/src/app/components/editpost/editpost.component.html
+++ b/src/app/components/editpost/editpost.component.html
@@ -19,6 +19,8 @@
         <mat-icon>warning</mat-icon> {{error}}
       </mat-error>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Save Post</button>
+    </form>
+    <form fxLayoutAlign="stretch" fxLayout="column" class="post-form">
       <button mat-raised-button class="mt-5" color="warn" (click)="deletePost()">Delete Post</button>
     </form>
   </mat-card>
