--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,14 +1,8 @@
-<div *ngIf="error; else connected" fxLayoutAlign="center center">
-  <mat-error>
-    <mat-icon>warning</mat-icon> {{error}}
-  </mat-error>
-</div>
-
-<ng-template class="content" #connected>
+<div class="content" #connected>
   <mat-card *ngFor="let x of response; let i = index" class="proposal">
     <mat-toolbar class="proposal-head" color="primary">
       {{x.title}}
-      <a routerLink="/editpost/{{x._id}}" *ngIf="isAuthor(x.author_id)" id="editLink"><img src="assets/pictures/edit_icon.png" style="width:1.5em; height: 1.5em;"></a>
+      <a routerLink="/editpost/{{x._id}}" *ngIf="isAuthor(x.authorId)" id="editLink"><img src="assets/pictures/edit_icon.png" style="width:1.5em; height: 1.5em;"></a>
     </mat-toolbar>
     <p class="policy">
       {{x.content}}
@@ -19,7 +13,7 @@
       {{displayVotes(x)}}
       <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" class="downVote" width="25" height="25" (click)="voteDown(i)" style="transform: scaleY(-1); cursor: pointer; padding: 3px">
       </div>
-      <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
+      <div class="date">{{x.created.substring(0,10).split('-').reverse().join('/')}}</div>
   </div>
     <ng-template #notLoggedIn>
         <div class="metaData">
@@ -28,8 +22,8 @@
             {{displayVotes(x)}}
             <img alt="downvote" src="{{emptyFilledPath[getDownvote(i)]}}" class="downVote" width="25" height="25" style="transform: scaleY(-1); cursor: pointer; padding: 3px">
           </div>
-          <div class="date">{{x.creation_date.substring(0,10).split('-').reverse().join('/')}}</div>
+          <div class="date">{{x.created.substring(0,10).split('-').reverse().join('/')}}</div>
         </div>
     </ng-template>
   </mat-card>
-</ng-template>
+</div>
