--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,7 +4,7 @@
   <div fxLayoutAlign="center start" class="card-div">
     <mat-card fxFlex="25">
       <mat-toolbar color="primary">Login Page</mat-toolbar>
-      <form fxLayoutAlign="stretch" fxLayout="column" class="login-form" [formGroup]="formGroup" (ngSubmit)="loginProcess()">
+      <form fxLayoutAlign="stretch" fxLayout="column" class="post-form" [formGroup]="formGroup" (ngSubmit)="loginProcess()">
         <mat-form-field>
           <input matInput placeholder="Username" formControlName="username">
         </mat-form-field>
