--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -30,7 +30,7 @@
     <mat-card fxFlex="25">
       <mat-toolbar color="primary">Not Logged in!</mat-toolbar>
       <form fxLayout="column" fxLayoutAlign="stretch"></form>
-      <mat-error>
+      <mat-error class="error-field">
         <mat-icon>warning</mat-icon> You seem to not be logged in! What do you want to do?
       </mat-error>
       <form fxLayoutAlign="stretch" fxLayout="column" >
