--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -28,7 +28,7 @@
       <label id="showP">
         <mat-checkbox name="showP" (click)="togglePass()">Show Password</mat-checkbox>
       </label>
-      <mat-error *ngIf="error">
+      <mat-error *ngIf="error" class="error-field">
         <mat-icon>warning</mat-icon> {{error}}
       </mat-error>
       <button mat-raised-button type="submit" class="mt-5" color="primary">Register</button>
