Request data button

--- a/src/app/components/user-settings/user-settings.component.html
+++ b/src/app/components/user-settings/user-settings.component.html
@@ -21,6 +21,7 @@
       <button mat-raised-button class="mt-5" color="accent" (click)="logOut()">Logout</button>
 
       <button mat-raised-button class="mt-5" color="warn" (click)="delUser()">Delete User</button>
+      <a id="request-data" (click)="openSnackBar()">Request data</a>
     </form>
   </mat-card>
 </div>
