Better infinite scrolling

--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,6 +1,5 @@
-<cdk-virtual-scroll-viewport itemSize="3">
-<div class="content" #connected>
-  <mat-card *cdkVirtualFor="let x of response; let i = index" class="proposal">
+<div class="content" #connected infinite-scroll [infiniteScrollDistance]="3">
+  <mat-card  class="proposal" *ngFor="let x of response; let i = index">
     <mat-toolbar class="proposal-head" color="primary">
       {{x.title}}
       <a routerLink="/editpost/{{x._id}}" *ngIf="isAuthor(x.authorId)" id="editLink"><img src="assets/pictures/edit_icon.png" style="width:1.5em; height: 1.5em;"></a>
@@ -28,4 +27,3 @@
     </ng-template>
   </mat-card>
 </div>
-</cdk-virtual-scroll-viewport>
